--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "enzyme",
+  "name": "testing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.1",
